#38565 Управление фото в media library не работает - Moved popover out of the scrollable container to prevent it from being clipped

--- a/src/Resources/public/media/src/styles/components/_gridlist.scss
+++ b/src/Resources/public/media/src/styles/components/_gridlist.scss
@@ -100,7 +100,8 @@
     }
 
 
-    .popover {
+    .popover,
+    &-popover-outer {
         max-width: none;
     }
 
